--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -225,8 +225,8 @@ img{
 /* ? Responsive */
 
 /* ? Agimat */
-@media screen and (max-width:480px){
-    
+@media screen and (max-width:320px){
+
     body{
         font-size: 15px;
     }
@@ -237,32 +237,35 @@ img{
     
     .menu{
         max-width: 100%;
-        height: 50px;
+        height: 100%;
     }
 
     .nav{
         display: flex;
-        height: 50px;
+        height: 100%;
     }
 
     .nav img{
         margin: 0;
         width: 80px;
-        height: 40px;
+        height: 100%;
         padding-top: 15px;
         padding-left: 20px;
     }
     
-    .nav-list{
-        margin: 0;
+    .nav ul.nav-list{
+        margin: 20px;
         padding: 0;
     }
 
     .nav ul li{
         padding: 0;
-        font-size: 10px;
         padding-top: 10px;
-        padding-right: 30px;
+        padding-right: 20px;
+    }
+
+    .nav ul li a{
+        font-size: 10px;
     }
 
     .Agimat-section__title{
@@ -288,8 +291,9 @@ img{
         padding-bottom: 5px;
     }
     
-    .Agimat-article__FX2018{
-        height: 490px;
+    .Agimat-article__FX2018,
+    .Agimat-container__FX2018{
+        height: 100%;
     }
     .Agimat-FX2018__paragraph,
     .Agimat-FX2018__title,
@@ -301,159 +305,21 @@ img{
     .Agimat-FX2018__title{
         margin-top: 10px;
     }
-
+    
     .Agimat-FX2018__image{
-        height: 160px;
-        padding-top: 10px;
+        margin: 0;
+        padding: 0;
+        height: 100%;
     }
 
     .Agimat-FX2018-container__paragraph{
         padding: 0;
-        height: 210px;
+        height: 100%;
     }
 
     .Agimat-FXPro-container__title{
-        height: 50px;
-    }
-
-    .Agimat-FXPro__span{
-        padding-left: 10px;
-        padding-right: 10px;
-        margin-bottom: 0px;
-    }
-
-    .Agimat-article__FXUltra{
-        display: block;
-    }
-
-    .Agimat-FXUltra-container__description{
-        width: 100%;
-    }
-
-    .Agimat-FXUltra__list{
-        padding: 0;
-        margin: 0;
-        padding-left: 15px;
-        padding-top: 8px;
-    }
-
-    .Agimat-FXUltra__subtitle{
-        margin-top: 10px;
-        margin-bottom: 15px;
-    }
-
-    .Agimat-FXUltra__image{
-        width: 280px;
-        margin-bottom: 15px;
-    }
-
-    .footer-container{
-        height: 70px;
-    }
-}
-
-@media screen and (max-width:420px){
-    
-    body{
-        font-size: 15px;
-    }
-
-    .header{
-        height: 50px;
-    }
-    
-    .menu{
-        max-width: 100%;
-        height: 50px;
-    }
-
-    .nav{
-        display: flex;
-        height: 50px;
-    }
-
-    .nav img{
-        margin: 0;
-        width: 80px;
-        height: 40px;
-        padding-top: 15px;
-        padding-left: 30px;
-    }
-    
-    .nav-list{
-        margin: 0;
-        padding: 0;
-    }
-
-    .nav ul li{
-        padding: 0;
-        font-size: 10px;
-        padding-top: 10px;
-        padding-right: 40px;
-    }
-
-    .Agimat-section__title{
-        margin: 0;
-        padding: 0;
-        font-size: 25px;
-        margin-top: 15px;
-    }
-
-    .Agimat-article__paragraph{
-        padding: 0;
-        margin-bottom: 0;
-    }
-
-    .Agimat-article__list{
-        margin: 5px;
-        padding: 0;
-        padding-left: 12px;
-    }
-
-    .Agimat-article-list__item{
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-    
-    .Agimat-article__FX2018{
-        height: 470px;
-    }
-    .Agimat-FX2018__paragraph,
-    .Agimat-FX2018__title,
-    .Agimat-FXPro__title,
-    .Agimat-container__FXUltra{
-        margin: 0;
-    }
-
-    .Agimat-FX2018-container__title{
-        height: 80px;
-        margin-bottom: 10px;
-    }
-    .Agimat-FX2018__title{
-        margin-top: 10px;
-    }
-
-    .Agimat-FX2018__image{
-        height: 180px;
-    }
-
-    .Agimat-FX2018-container__paragraph{
-        padding: 0;
-        height: 200px;
-        margin-top: 20px;
-    }
-    
-    .Agimat-FX2018__paragraph{
-        height: 200px;
-    }
-
-    .Agimat-FXPro-container__title{
-        padding-top: 10px;
-        height: 40px;
-    }
-    
-    .Agimat-FXPro__title{
-        margin-top: 10px;
+        margin-top:10px ;
+        height: 100%;
     }
 
     .Agimat-FXPro__span{
@@ -504,24 +370,25 @@ img{
     
     .menu{
         max-width: 100%;
-        height: 50px;
+        height: 100%;
     }
 
     .nav{
         display: flex;
-        height: 50px;
+        height: 100%;
     }
 
     .nav img{
         margin: 0;
         width: 80px;
-        height: 40px;
+        height: 100%;
         padding-top: 15px;
         padding-left: 20px;
     }
     
-    .nav-list{
-        margin: 0;
+    .nav ul.nav-list{
+        margin: 30px;
+        margin-right: 0;
         padding: 0;
     }
 
@@ -529,7 +396,7 @@ img{
         padding: 0;
         font-size: 10px;
         padding-top: 10px;
-        padding-right: 30px;
+        padding-right: 25px;
     }
 
     .Agimat-section__title{
@@ -556,7 +423,7 @@ img{
     }
     
     .Agimat-article__FX2018{
-        height: 490px;
+        height: 100%;
     }
     .Agimat-FX2018__paragraph,
     .Agimat-FX2018__title,
@@ -570,17 +437,20 @@ img{
     }
 
     .Agimat-FX2018__image{
-        height: 160px;
+        height: 100%;
         padding-top: 10px;
     }
 
     .Agimat-FX2018-container__paragraph{
         padding: 0;
-        height: 210px;
+        height: 100%;
+        margin-top: 10px;
     }
 
     .Agimat-FXPro-container__title{
-        height: 50px;
+        padding: 0;
+        height: 100%;
+        margin-top: ;
     }
 
     .Agimat-FXPro__span{
@@ -619,8 +489,8 @@ img{
     }
 }
 
-@media screen and (max-width:320px){
-
+@media screen and (max-width:420px){
+    
     body{
         font-size: 15px;
     }
@@ -631,32 +501,33 @@ img{
     
     .menu{
         max-width: 100%;
-        height: 50px;
+        height: 100%;
     }
 
     .nav{
         display: flex;
-        height: 50px;
+        height: 100%;
     }
 
     .nav img{
         margin: 0;
         width: 80px;
-        height: 40px;
+        height: 100%;
         padding-top: 15px;
-        padding-left: 20px;
+        padding-left: 25px;
     }
     
-    .nav-list{
+    .nav ul.nav-list{
         margin: 0;
         padding: 0;
+        margin-left: 30px;
     }
 
     .nav ul li{
         padding: 0;
         font-size: 10px;
         padding-top: 10px;
-        padding-right: 30px;
+        padding-right: 40px;
     }
 
     .Agimat-section__title{
@@ -682,9 +553,10 @@ img{
         padding-bottom: 5px;
     }
     
-    .Agimat-article__FX2018,
-    .Agimat-container__FX2018{
-        height: 530px;
+    .Agimat-article__FX2018{
+        display: flex;
+        flex-wrap: wrap;
+        height: 100%;
     }
     .Agimat-FX2018__paragraph,
     .Agimat-FX2018__title,
@@ -693,29 +565,42 @@ img{
         margin: 0;
     }
 
+    .Agimat-FX2018-container__title{
+        height: 100%;
+        margin-bottom: 10px;
+    }
     .Agimat-FX2018__title{
         margin-top: 10px;
     }
-    
+
     .Agimat-FX2018__image{
-        height: 160px;
-        margin-top: 40px;
-        padding-top: 10px;
+        height: 100%;
     }
 
     .Agimat-FX2018-container__paragraph{
         padding: 0;
-        height: 210px;
+        height: 100%;
+        margin-top: 0;
+    }
+    
+    .Agimat-FX2018__paragraph{
+        margin-top: 15px;
+        height: 100%;
     }
 
     .Agimat-FXPro-container__title{
-        height: 50px;
+        padding-top: 10px;
+        height: 100%;
+    }
+    
+    .Agimat-FXPro__title{
+        margin-top: 0;
     }
 
     .Agimat-FXPro__span{
         padding-left: 10px;
         padding-right: 10px;
-        margin-bottom: 0px;
+        margin: 0px;
     }
 
     .Agimat-article__FXUltra{
@@ -747,6 +632,472 @@ img{
         height: 70px;
     }
 }
+
+@media screen and (max-width:480px){
+    
+    body{
+        font-size: 15px;
+    }
+
+    .header{
+        height: 50px;
+    }
+    
+    .menu{
+        max-width: 100%;
+        height: 100%;
+    }
+
+    .nav{
+        display: flex;
+        height: 100%;
+    }
+
+    .nav img{
+        margin: 0;
+        width: 80px;
+        height: 100%;
+        padding-top: 15px;
+        padding-left: 40px;
+    }
+    
+    .nav ul.nav-list{
+        margin: 0;
+        padding: 0;
+        margin-left: 60px;
+    }
+
+    .nav ul li{
+        padding: 0;
+        font-size: 10px;
+        padding-top: 10px;
+        padding-right: 40px;
+    }
+
+    .Agimat-section__title{
+        margin: 0;
+        padding: 0;
+        font-size: 25px;
+        margin-top: 15px;
+    }
+
+    .Agimat-article__paragraph{
+        padding: 0;
+        margin-bottom: 0;
+    }
+
+    .Agimat-article__list{
+        margin: 5px;
+        padding: 0;
+        padding-left: 12px;
+    }
+
+    .Agimat-article-list__item{
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    
+    .Agimat-article__FX2018{
+        height: 100%;
+    }
+    .Agimat-FX2018__paragraph,
+    .Agimat-FX2018__title,
+    .Agimat-FXPro__title,
+    .Agimat-container__FXUltra{
+        margin: 0;
+    }
+
+    .Agimat-FX2018-container__title{
+        height: 100%;
+    }
+
+    .Agimat-FX2018__title{
+        margin:0;
+    }
+
+    .Agimat-FX2018__image{
+        padding: 0;
+        height: 100%;
+        margin-top: 10px;
+    }
+
+    .Agimat-FX2018-container__paragraph{
+        padding: 0;
+        height: 100%;
+        margin-top: 15px;
+    }
+
+    .Agimat-FXPro-container__title{
+        padding-top: 15px;
+        height: 100%;
+    }
+
+    .Agimat-FXPro__span{
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 0px;
+    }
+
+    .Agimat-article__FXUltra{
+        display: block;
+    }
+
+    .Agimat-FXUltra-container__description{
+        width: 100%;
+    }
+
+    .Agimat-FXUltra__title{
+        margin-top: 10px;
+        margin-bottom: 0;
+    }
+
+    .Agimat-FXUltra__list{
+        padding: 0;
+        margin: 0;
+        padding-left: 15px;
+        padding-top: 8px;
+    }
+
+    .Agimat-FXUltra__first-paragraph,
+    .Agimat-FXUltra__second-paragraph{
+        margin:0;
+        padding: 0;
+    }
+
+    .Agimat-FXUltra__first-paragraph{
+        margin-top: 10px;
+    }
+
+    .Agimat-FXUltra__second-paragraph{
+        margin-top: 5px;
+    }
+
+    .Agimat-FXUltra__subtitle{
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
+
+    .Agimat-FXUltra__image{
+        width: 280px;
+        margin-bottom: 15px;
+    }
+
+    .footer-container{
+        height: 70px;
+    }
+}
+
+@media screen and (max-width:640px){
+
+    body{
+        font-size: 15px;
+    }
+
+    .header{
+        height: 50px;
+    }
+    
+    .menu{
+        max-width: 100%;
+        height: 100%;
+    }
+
+    .nav{
+        display: flex;
+        height: 100%;
+    }
+
+    .nav img{
+        margin: 0;
+        width: 80px;
+        height: 100%;
+        padding: 0;
+        padding-top: 15px;
+        margin-left: 60px;
+    }
+    
+    .nav ul.nav-list{
+        margin: 0;
+        padding: 0;
+        margin-left: 50px;
+    }
+
+    .nav ul li{
+        padding: 0;
+        font-size: 10px;
+        padding-top: 10px;
+        padding-right: 50px;
+    }
+
+    .Agimat-section__title{
+        margin: 0;
+        padding: 0;
+        font-size: 25px;
+        margin-top: 15px;
+    }
+
+    .Agimat-article__paragraph{
+        padding: 0;
+        margin-bottom: 0;
+    }
+
+    .Agimat-article__list{
+        margin: 5px;
+        padding: 0;
+        padding-left: 12px;
+    }
+
+    .Agimat-article-list__item{
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    
+    .Agimat-article__FX2018{
+        height: 100%;
+    }
+    .Agimat-FX2018__paragraph,
+    .Agimat-FX2018__title,
+    .Agimat-FXPro__title,
+    .Agimat-container__FXUltra{
+        margin: 0;
+    }
+
+    .Agimat-FX2018-container__title{
+        height: 100%;
+    }
+
+    .Agimat-FX2018__title{
+        margin:0;
+    }
+
+    .Agimat-FX2018__image{
+        padding: 0;
+        height: 100%;
+        margin-top: 10px;
+    }
+
+    .Agimat-FX2018-container__paragraph{
+        padding: 0;
+        height: 100%;
+        margin-top: 15px;
+    }
+
+    .Agimat-FXPro-container__title{
+        padding-top: 15px;
+        height: 100%;
+    }
+
+    .Agimat-FXPro__span{
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 0px;
+    }
+
+    .Agimat-article__FXUltra{
+        display: block;
+    }
+
+    .Agimat-FXUltra-container__description{
+        width: 100%;
+    }
+
+    .Agimat-FXUltra__title{
+        margin-top: 10px;
+        margin-bottom: 0;
+    }
+
+    .Agimat-FXUltra__list{
+        padding: 0;
+        margin: 0;
+        padding-left: 15px;
+        padding-top: 8px;
+    }
+
+    .Agimat-FXUltra__first-paragraph,
+    .Agimat-FXUltra__second-paragraph{
+        margin:0;
+        padding: 0;
+    }
+
+    .Agimat-FXUltra__first-paragraph{
+        margin-top: 10px;
+    }
+
+    .Agimat-FXUltra__second-paragraph{
+        margin-top: 5px;
+    }
+
+    .Agimat-FXUltra__subtitle{
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
+
+    .Agimat-FXUltra__image{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+
+    .footer-container{
+        height: 70px;
+    }
+}
+
+@media screen and (max-width:768px){
+    body{
+        font-size: 15px;
+    }
+
+    .header{
+        height: 50px;
+    }
+    
+    .menu{
+        max-width: 100%;
+        height: 100%;
+    }
+
+    .nav{
+        display: flex;
+        height: 100%;
+    }
+
+    .nav img{
+        margin: 0;
+        width: 80px;
+        height: 100%;
+        padding: 0;
+        padding-top: 15px;
+        margin-left: 80px;
+    }
+    
+    .nav ul.nav-list{
+        margin: 0;
+        padding: 0;
+        margin-left: 80px;
+    }
+
+    .nav ul li{
+        padding: 0;
+        font-size: 10px;
+        padding-top: 10px;
+        padding-right: 60px;
+    }
+
+    .Agimat-section__title{
+        margin: 0;
+        padding: 0;
+        font-size: 25px;
+        margin-top: 15px;
+    }
+
+    .Agimat-article__paragraph{
+        padding: 0;
+        margin-bottom: 0;
+    }
+
+    .Agimat-article__list{
+        margin: 5px;
+        padding: 0;
+        padding-left: 12px;
+    }
+
+    .Agimat-article-list__item{
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    
+    .Agimat-article__FX2018{
+        height: 100%;
+    }
+    .Agimat-FX2018__paragraph,
+    .Agimat-FX2018__title,
+    .Agimat-FXPro__title,
+    .Agimat-container__FXUltra{
+        margin: 0;
+    }
+
+    .Agimat-FX2018-container__title{
+        height: 100%;
+    }
+
+    .Agimat-FX2018__title{
+        margin:0;
+    }
+
+    .Agimat-FX2018__image{
+        padding: 0;
+        height: 100%;
+        margin-top: 10px;
+    }
+
+    .Agimat-FX2018-container__paragraph{
+        width: 100%;
+        padding: 0;
+        height: 100%;
+        margin-top: 15px;
+    }
+
+    .Agimat-FXPro-container__title{
+        padding-top: 15px;
+        height: 100%;
+    }
+
+    .Agimat-FXPro__span{
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 0px;
+    }
+
+    .Agimat-article__FXUltra{
+        display: block;
+    }
+
+    .Agimat-FXUltra-container__description{
+        width: 100%;
+    }
+
+    .Agimat-FXUltra__title{
+        margin-top: 10px;
+        margin-bottom: 0;
+    }
+
+    .Agimat-FXUltra__list{
+        padding: 0;
+        margin: 0;
+        padding-left: 15px;
+        padding-top: 8px;
+    }
+
+    .Agimat-FXUltra__first-paragraph,
+    .Agimat-FXUltra__second-paragraph{
+        margin:0;
+        padding: 0;
+    }
+
+    .Agimat-FXUltra__first-paragraph{
+        margin-top: 10px;
+    }
+
+    .Agimat-FXUltra__second-paragraph{
+        margin-top: 5px;
+    }
+
+    .Agimat-FXUltra__subtitle{
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
+
+    .Agimat-FXUltra__image{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+
+    .footer-container{
+        height: 70px;
+    }
+}
+
+
 
 
 
