--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -19,9 +19,6 @@ img {
 
 .container {
   max-width: 100%;
-  height: 100%;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .header-container {
@@ -53,6 +50,7 @@ img {
 
 .nav ul li.nav-list__item {
   padding-right: 200px;
+  padding-top: 10px;
 }
 
 .nav ul li.nav-list__item:nth-child(3) {
@@ -62,7 +60,7 @@ img {
 
 .nav ul.nav-list {
   flex: 1;
-  margin-left: 200px;
+  margin-left: 187px;
 }
 .nav ul li a {
   color: #eee;
@@ -74,6 +72,18 @@ img {
   border-bottom: 3px solid #eee;
 }
 
+.Agimat-section__title {
+  margin: 0;
+}
+
+.Agimat-article__paragraph {
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+.Agimat-article__list {
+  margin: 15px 0;
+}
 .Agimat-article-list__item {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -99,7 +109,6 @@ img {
 .Agimat-article__FX2018 {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   height: 100%;
 }
 
@@ -108,15 +117,23 @@ img {
   height: 100%;
 }
 
+.Agimat-FX2018__title {
+  margin: 15px 0;
+}
+
 .Agimat-FX2018__image {
-  padding-top: 35px;
+  padding-top: 20px;
   width: 700px;
   height: 100%;
 }
 .Agimat-FX2018-container__paragraph {
   width: 450px;
   height: 100%;
-  padding-left: 40px;
+  padding-left: 10px;
+}
+
+.Agimat-FX2018__paragraph {
+  margin-top: 13px;
 }
 
 .Agimat-article__FXPro {
@@ -128,12 +145,25 @@ img {
   max-width: 100%;
   height: 100%;
 }
+
+.Agimat-FXPro__title {
+  margin: 0;
+}
+
+.Agimat-FXPro__paragraph {
+  margin: 15px 0;
+}
+
 .Agimat-FXPro-container__image {
   width: 900px;
   margin-left: auto;
   margin-right: auto;
 }
 
+.Agimat-FXUltra__title,
+.Agimat-FXUltra__subtitle {
+  margin: 0;
+}
 .Agimat-container__FXUltra {
   margin-top: 30px;
 }
@@ -148,12 +178,26 @@ img {
   height: 100%;
 }
 
+.Agimat-FXUltra__first-paragraph {
+  margin: 15px 0;
+}
+
+.Agimat-FXUltra__second-paragraph {
+  margin-top: 0;
+}
+
 .Agimat-FXUltra-container__signals {
   width: 90%;
   height: 100%;
 }
+
+.Agimat-FXUltra-container__list {
+  margin-top: 15px;
+}
+
 .Agimat-FXUltra-container__list ul {
   list-style: square;
+  margin: 15px 0;
 }
 
 .Agimat-FXUltra-container__list ul li {
@@ -185,19 +229,43 @@ img {
   width: 100%;
 }
 
+.fso-title {
+  margin: 0;
+  margin-top: 10px;
+}
+
 .fso-container__paragraph {
   width: 50%;
   height: 100%;
-  padding-right: 50px;
+  padding-right: 25px;
+}
+
+.fso-intro-paragraph {
+  margin: 10px 0;
+}
+
+.fso-qualities-paragraph {
+  margin: 10px 0;
+}
+
+.fso__paragraph {
+  margin: 10px 0;
+}
+
+.fso-bonus__paragraph {
+  margin-top: 15px;
+  margin-bottom: 0;
 }
 
 .fso-container__image {
   width: 50%;
-  height: 500px;
+  height: 100%;
+  align-self: center;
 }
 
 .fso-container__image img {
-  height: 500px;
+  width: 100%;
+  height: 200%;
 }
 
 .fso-container__signals {
@@ -209,25 +277,37 @@ img {
   width: 100%;
 }
 
+.fso__title {
+  margin-top: 25px;
+  margin-bottom: 0;
+}
+
+.fso-list__span {
+  margin: 15px 0;
+}
+
 .fso-container__list {
-  width: 55%;
-  height: 300px;
+  width: 45%;
+  height: 25%;
   list-style: square;
 }
 
 .fso-list__item {
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 10px 0;
 }
 
 .fso-signals__img {
-  width: 80%;
+  width: 52%;
+  margin-left: 3%;
+  margin-top: 20px;
   margin-bottom: 50px;
 }
 
 /* ? Responsive */
 
 @media screen and (max-width: 1400px) {
+
+  /* ?Header */
   .nav ul.nav-list {
     margin: 0;
     padding: 0;
@@ -237,12 +317,14 @@ img {
   .nav ul li.nav-list__item {
     padding: 0;
     padding-right: 150px;
+    padding-top: 10px;
   }
 
   .nav ul li.nav-list__item:nth-child(3) {
     padding-right: 0;
   }
 
+  /* ? Agimat */
   .Agimat-section__title {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -314,9 +396,22 @@ img {
   .Agimat-FXUltra__subtitle {
     margin-bottom: 15px;
   }
+
+  /* ? Forex Signals */
+
+  .fso-container__paragraph{
+    padding-right: 25px;
+    width: 50%;
+  }
+  .fso-container__image{
+    height: 465px;
+    margin-top: 15px;
+    align-self: center;
+  }
 }
 
 @media screen and (max-width: 1200px) {
+  /* ? Header */
   .nav ul.nav-list {
     margin: 0;
     padding: 0;
@@ -326,11 +421,14 @@ img {
   .nav ul li.nav-list__item {
     padding: 0;
     padding-right: 80px;
+    padding-top: 10px;
   }
 
   .nav ul li.nav-list__item:nth-child(3) {
     padding-right: 0;
   }
+
+  /* ? Agimat */
 
   .Agimat-section__title {
     margin-top: 10px;
@@ -402,11 +500,79 @@ img {
   .Agimat-FXUltra__subtitle {
     margin-bottom: 15px;
   }
+
+  /* ? Forex Signals */
+  .main-container {
+    font-size: 15px;
+  }
+  .fso-title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .fso-container__paragraph {
+    padding: 0;
+    width: 100%;
+  }
+
+  .fso-intro-paragraph {
+    margin: 0;
+  }
+
+  .fso-qualities-paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container__image {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .fso__paragraph,
+  .fso-bonus__paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container-signals__title {
+    margin: 0;
+  }
+
+  .fso__title {
+    margin: 0;
+  }
+
+  .fso-container__list {
+    width: 100%;
+    height: 19%;
+  }
+
+  .fso-list__span {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .fso__list {
+    width: 100%;
+    padding-left: 20px;
+    margin-top: 10px;
+    list-style: square;
+  }
+
+  .fso-list__item {
+    padding: 5px 0;
+  }
+
+  .fso-signals__img {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
-  /* ? Agimat */
-
+  /* ? Header */
   .header {
     height: 50px;
   }
@@ -443,6 +609,7 @@ img {
     padding-right: 50px;
   }
 
+  /* ? Agimat */
   .Agimat-section__title {
     margin: 0;
     padding: 0;
@@ -552,18 +719,87 @@ img {
     margin-bottom: 15px;
   }
 
+  /* ? Forex Signals */
+  .main-container {
+    font-size: 15px;
+  }
+  .fso-title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .fso-container__paragraph {
+    padding: 0;
+    width: 100%;
+  }
+
+  .fso-intro-paragraph {
+    margin: 0;
+  }
+
+  .fso-qualities-paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container__image {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .fso__paragraph,
+  .fso-bonus__paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container-signals__title {
+    margin: 0;
+  }
+
+  .fso__title {
+    margin: 0;
+  }
+
+  .fso-container__list {
+    width: 100%;
+    height: 19%;
+  }
+
+  .fso-list__span {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .fso__list {
+    width: 100%;
+    padding-left: 20px;
+    margin-top: 10px;
+    list-style: square;
+  }
+
+  .fso-list__item {
+    padding: 5px 0;
+  }
+
+  .fso-signals__img {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+  }
+
+  /* ? Footer */
   .footer-container {
     height: 70px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  /* ? Agimat */
-
   body {
     font-size: 15px;
   }
 
+  /* ? Header */
   .header {
     height: 50px;
   }
@@ -600,6 +836,7 @@ img {
     padding-right: 70px;
   }
 
+  /* ? Agimat */
   .Agimat-container {
     font-size: 15px;
   }
@@ -713,18 +950,85 @@ img {
     margin-bottom: 15px;
   }
 
+  /* ? Forex Signals */
+  .main-container {
+    font-size: 15px;
+  }
+  .fso-title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .fso-container__paragraph {
+    padding: 0;
+    width: 100%;
+  }
+
+  .fso-intro-paragraph {
+    margin: 0;
+  }
+
+  .fso-qualities-paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container__image {
+    width: 100%;
+  }
+
+  .fso__paragraph,
+  .fso-bonus__paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container-signals__title {
+    margin: 0;
+  }
+
+  .fso__title {
+    margin: 0;
+  }
+
+  .fso-container__list {
+    width: 100%;
+    height: 22%;
+  }
+
+  .fso-list__span {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .fso__list {
+    width: 100%;
+    padding-left: 20px;
+    margin-top: 10px;
+    list-style: square;
+  }
+
+  .fso-list__item {
+    padding: 5px 0;
+  }
+
+  .fso-signals__img {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+  }
+
+  /* ? Footer */
   .footer-container {
     height: 70px;
   }
 }
 
 @media screen and (max-width: 640px) {
-  /* ? Agimat */
-
   body {
     font-size: 15px;
   }
 
+  /* ? Header */
   .header {
     height: 50px;
   }
@@ -761,6 +1065,7 @@ img {
     padding-right: 60px;
   }
 
+  /* ? Agimat */
   .Agimat-container {
     font-size: 15px;
   }
@@ -873,18 +1178,85 @@ img {
     margin-bottom: 15px;
   }
 
+  /* ? Forex Signals */
+  .main-container {
+    font-size: 15px;
+  }
+  .fso-title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .fso-container__paragraph {
+    padding: 0;
+    width: 100%;
+  }
+
+  .fso-intro-paragraph {
+    margin: 0;
+  }
+
+  .fso-qualities-paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container__image {
+    width: 100%;
+  }
+
+  .fso__paragraph,
+  .fso-bonus__paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container-signals__title {
+    margin: 0;
+  }
+
+  .fso__title {
+    margin: 0;
+  }
+
+  .fso-container__list {
+    width: 100%;
+    height: 25%;
+  }
+
+  .fso-list__span {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .fso__list {
+    width: 100%;
+    padding-left: 20px;
+    margin-top: 10px;
+    list-style: square;
+  }
+
+  .fso-list__item {
+    padding: 5px 0;
+  }
+
+  .fso-signals__img {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+  }
+
+  /* ? Footer */
   .footer-container {
     height: 70px;
   }
 }
 
 @media screen and (max-width: 480px) {
-  /* ? Agimat */
-
   body {
     font-size: 15px;
   }
 
+  /* ? Header */
   .header {
     height: 50px;
   }
@@ -920,6 +1292,7 @@ img {
     padding-right: 40px;
   }
 
+  /* ? Agimat */
   .Agimat-container {
     font-size: 15px;
   }
@@ -1032,18 +1405,86 @@ img {
     margin-bottom: 15px;
   }
 
+  /* ? Forex Signals */
+  .main-container {
+    font-size: 15px;
+  }
+
+  .fso-title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .fso-container__paragraph {
+    padding: 0;
+    width: 100%;
+  }
+
+  .fso-intro-paragraph {
+    margin: 0;
+  }
+
+  .fso-qualities-paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container__image {
+    width: 100%;
+  }
+
+  .fso__paragraph,
+  .fso-bonus__paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container-signals__title {
+    margin: 0;
+  }
+
+  .fso__title {
+    margin: 0;
+  }
+
+  .fso-container__list {
+    width: 100%;
+    height: 30%;
+  }
+
+  .fso-list__span {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .fso__list {
+    width: 100%;
+    padding-left: 20px;
+    margin-top: 10px;
+    list-style: square;
+  }
+
+  .fso-list__item {
+    padding: 5px 0;
+  }
+
+  .fso-signals__img {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+  }
+
+  /* ? Footer */
   .footer-container {
     height: 70px;
   }
 }
 
 @media screen and (max-width: 420px) {
-  /* ? Agimat */
-
   body {
     font-size: 15px;
   }
 
+  /* ? Header */
   .header {
     height: 50px;
   }
@@ -1079,6 +1520,7 @@ img {
     padding-right: 40px;
   }
 
+  /* ? Agimat */
   .Agimat-container {
     font-size: 15px;
   }
@@ -1181,18 +1623,85 @@ img {
     margin-bottom: 15px;
   }
 
+  /* ? Forex Signals */
+  .main-container {
+    font-size: 15px;
+  }
+  .fso-title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .fso-container__paragraph {
+    padding: 0;
+    width: 100%;
+  }
+
+  .fso-intro-paragraph {
+    margin: 0;
+  }
+
+  .fso-qualities-paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container__image {
+    width: 100%;
+  }
+
+  .fso__paragraph,
+  .fso-bonus__paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container-signals__title {
+    margin: 0;
+  }
+
+  .fso__title {
+    margin: 0;
+  }
+
+  .fso-container__list {
+    width: 100%;
+    height: 33%;
+  }
+
+  .fso-list__span {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .fso__list {
+    width: 100%;
+    padding-left: 20px;
+    margin-top: 10px;
+    list-style: square;
+  }
+
+  .fso-list__item {
+    padding: 5px 0;
+  }
+
+  .fso-signals__img {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+  }
+
+  /* ? Footer */
   .footer-container {
     height: 70px;
   }
 }
 
 @media screen and (max-width: 360px) {
-  /* ? Agimat */
-
   body {
     font-size: 15px;
   }
 
+  /* ? Header */
   .header {
     height: 50px;
   }
@@ -1228,6 +1737,7 @@ img {
     padding-right: 25px;
   }
 
+  /* ? Agimat */
   .Agimat-container {
     font-size: 15px;
   }
@@ -1322,18 +1832,88 @@ img {
     margin-bottom: 15px;
   }
 
+  /* ? Forex Signals */
+
+  .main-container {
+    font-size: 15px;
+  }
+  .fso-title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .fso-container__paragraph {
+    padding: 0;
+    width: 100%;
+  }
+
+  .fso-intro-paragraph {
+    margin: 0;
+  }
+
+  .fso-qualities-paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container__image {
+    width: 100%;
+  }
+
+  .fso__paragraph,
+  .fso-bonus__paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container-signals__title {
+    margin: 0;
+    height: 30px;
+  }
+
+  .fso__title {
+    margin: 0;
+  }
+
+  .fso-container__list {
+    width: 100%;
+    height: 37%;
+    line-height: 15px;
+  }
+
+  .fso-list__span {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .fso__list {
+    width: 100%;
+    padding-left: 20px;
+    margin-top: 10px;
+    list-style: square;
+  }
+
+  .fso-list__item {
+    padding: 5px 0;
+  }
+
+  .fso-signals__img {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+  }
+
+  /* ? Footer */
   .footer-container {
     height: 70px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  /* ? Agimat */
-
   body {
     font-size: 15px;
   }
 
+  /* ? Header */
   .header {
     height: 50px;
   }
@@ -1357,7 +1937,7 @@ img {
   }
 
   .nav ul.nav-list {
-    margin: 20px;
+    margin-left: 50px;
     padding: 0;
   }
 
@@ -1371,6 +1951,7 @@ img {
     font-size: 10px;
   }
 
+  /* ? Agimat */
   .Agimat-section__title {
     margin: 0;
     padding: 0;
@@ -1452,10 +2033,79 @@ img {
   }
 
   .Agimat-FXUltra__image {
-    width: 280px;
+    width: 100%;
     margin-bottom: 15px;
   }
 
+  /* ? Forex Signals */
+
+  .main-container {
+    font-size: 12px;
+  }
+  .fso-title {
+    font-size: 25px;
+    margin: 10px 0;
+  }
+
+  .fso-container__paragraph {
+    padding: 0;
+    width: 100%;
+  }
+
+  .fso-intro-paragraph {
+    margin: 0;
+  }
+
+  .fso-qualities-paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container__image {
+    width: 100%;
+  }
+
+  .fso__paragraph,
+  .fso-bonus__paragraph {
+    margin: 10px 0;
+  }
+
+  .fso-container-signals__title {
+    margin-bottom: 10px;
+  }
+
+  .fso__title {
+    margin: 0;
+  }
+
+  .fso-container__list {
+    width: 100%;
+    height: 37%;
+  }
+
+  .fso-list__span {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+
+  .fso__list {
+    width: 100%;
+    padding-left: 20px;
+    margin-top: 10px;
+    list-style: square;
+  }
+
+  .fso-list__item {
+    padding: 5px 0;
+  }
+
+  .fso-signals__img {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+  }
+
+  /* ? Footer */
   .footer-container {
     height: 70px;
   }
